# youtube-conspiracy-detection

./: README.md  pyproject.toml
notebooks/: Results Analysis - Summary.csv  analyze_experiment_results.ipynb  cohen_k.ipynb  explore_hf_mm_models.ipynb  explore_hf_models.ipynb  explore_itw_dataset.ipynb  explore_myyounicon.ipynb  explore_ollama_models.ipynb  explore_random_sample_data.ipynb  graphs_and_tables.ipynb  hf_models_in_the_wild.ipynb  roberta_basemodel.ipynb
project/: give_me_a_decent_name.py  models.py  scratch.py
project/dataset_generation/: dataset_generation.py  yt_dlp_download.py
project/experiments/: models.py
project/llm_models/: inference.py  prompts.py
project/utils/: dataset_utils.py  ffmpeg_utils.py  json.py  sampling_utils.py  subtitles_utils.py  yt_dlp_utils.py
project/youtube/: client.py  models.py  response_example.json  serialized_searchresult.json
scripts/: convert_webp_to_jpg.py  download_test_sample.py  fix_failed_from_younicon.py  generate_dataset_from_younicon.py  linters.sh  merge_datasets.py  merge_experiments_resuslts.py  sample_at_fixed_intervals.py
