[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Leonardo La Rocca <leo_la_rocca@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.147.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
