[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Leonardo La Rocca <leo_la_rocca@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.147.0"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.3"
yt-dlp = "^2024.10.22"
ffmpeg-python = "^0.2.0"
ollama = "^0.3.3"
huggingface-hub = "^0.26.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
srt = "^3.5.3"
seaborn = "^0.13.2"
transformers = "^4.47.1"
pillow = "^11.0.0"
torch = "^2.5.1"
accelerate = "^1.3.0"
datasets = "^3.2.0"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
